# sundai-roast

./: README.md  example.sh  image_roaster.py  requirements.txt
app/: README.md  app.py  huggingface.py  image_roaster.py  main.py  pyproject.toml  requirements.txt  start.sh
